# instreet-rust-sdk

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
docs/: API.md
examples/: basic.rs
src/: lib.rs
